Style updates: dark mode improvements, cart page styling, markup fixes
- Moved Remove button before Edit button on mobile
- Removed background colors from various cart elements
- Added dark mode button styling
- Updated crontab with markup parameters

--- a/templates/orderforms/standard_cart/css/all.css
+++ b/templates/orderforms/standard_cart/css/all.css
@@ -47,8 +47,6 @@
     width: 35%;
     position: relative;
     min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -467,7 +465,6 @@
     padding: 10px;
     min-height: 100px;
     border-radius: 3px;
-    background-color: #f8f8f8;
     font-size: 0.8em;
 }
 
