--- a/templates/orderforms/standard_cart/css/style.css
+++ b/templates/orderforms/standard_cart/css/style.css
@@ -49,8 +49,6 @@
     width: 35%;
     position: relative;
     min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
 }
 
 @media only screen and (max-width: 1199px) {
