--- a/templates/undomains/assets/css/style.css
+++ b/templates/undomains/assets/css/style.css
@@ -10088,7 +10088,6 @@ body[data-font="raleway"] button{
 	}
 
 	.footer .logo-footer {
-		margin: 0 auto;
 		width: 160px;
 	}
 
